--- a/US_births_2000-2014.html
+++ b/US_births_2000-2014.html
@@ -191,11 +191,11 @@ sample_n(births, 5)</code></pre>
 <pre><code># A tibble: 5 x 5
    year month date_of_month day_of_week births
   &lt;dbl&gt; &lt;dbl&gt;         &lt;dbl&gt;       &lt;dbl&gt;  &lt;dbl&gt;
-1  2008    10            15           3  13299
-2  2000     5            28           7   7873
-3  2003     7             3           4  13487
-4  2000     8            27           7   8240
-5  2013    12            31           2  12525</code></pre>
+1  2002     3            23           6   8569
+2  2008     3            24           1  12352
+3  2001     6            11           1  11776
+4  2009     5            29           5  13290
+5  2004     6            25           5  13074</code></pre>
 <pre class="r"><code>births &lt;- births %&gt;% 
   mutate(year = as_factor(year)) %&gt;% 
   mutate(month = as_factor(month)) %&gt;% 
@@ -237,7 +237,7 @@ births</code></pre>
 <pre class="r"><code>summary(births$births)</code></pre>
 <pre><code>   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
    5728    8740   12343   11350   13082   16081 </code></pre>
-<p>It seems to be two means in our dataset (binomial)</p>
+<p>It seems to be two means in our dataset (bi-modal)</p>
 <pre class="r"><code>ggplot(births, aes(y=births, x = year, color = year)) + 
   geom_boxplot() +
   labs(title = &quot;Distribution of births in US&quot;,
@@ -268,7 +268,7 @@ $subtitle
 
 attr(,&quot;class&quot;)
 [1] &quot;labels&quot;</code></pre>
-<p>After splitting the dataset by year and month I see the same binomial behavior</p>
+<p>After splitting the dataset by year and month I see the same bi-modal behavior</p>
 <pre class="r"><code>ggplot(births, aes(births, color = year)) + 
   geom_density() +
   facet_wrap(~day_of_week)</code></pre>
